; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/mbedtls/app/extr_espconn_mbedtls.c_espconn_close_internal.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/mbedtls/app/extr_espconn_mbedtls.c_espconn_close_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.espconn*, %struct.espconn*, %struct.TYPE_5__, i64 }
%struct.espconn = type { i32 }
%struct.TYPE_5__ = type { i32, i64, i64, i32* }

@ESPCONN_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @espconn_close_internal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @espconn_close_internal(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca %struct.espconn*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %10, %struct.TYPE_6__** %5, align 8
  store %struct.espconn* null, %struct.espconn** %6, align 8
  store i64 0, i64* %7, align 8
  store i64 0, i64* %8, align 8
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %12 = call i32 @lwIP_ASSERT(%struct.TYPE_6__* %11)
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 1
  %15 = load %struct.espconn*, %struct.espconn** %14, align 8
  store %struct.espconn* %15, %struct.espconn** %6, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 2
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  store i64 %19, i64* %7, align 8
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 3
  %22 = load i64, i64* %21, align 8
  store i64 %22, i64* %8, align 8
  %23 = load %struct.espconn*, %struct.espconn** %6, align 8
  %24 = icmp ne %struct.espconn* %23, null
  br i1 %24, label %25, label %41

25:                                               ; preds = %2
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 2
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  store i32 0, i32* %28, align 8
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 2
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 3
  store i32* null, i32** %31, align 8
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 2
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 2
  store i64 0, i64* %34, align 8
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 2
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 1
  store i64 0, i64* %37, align 8
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 1
  %40 = load %struct.espconn*, %struct.espconn** %39, align 8
  store %struct.espconn* %40, %struct.espconn** %6, align 8
  br label %47

41:                                               ; preds = %2
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 0
  %44 = load %struct.espconn*, %struct.espconn** %43, align 8
  store %struct.espconn* %44, %struct.espconn** %6, align 8
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %46 = call i32 @os_free(%struct.TYPE_6__* %45)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %5, align 8
  br label %47

47:                                               ; preds = %41, %25
  %48 = call i32 (...) @espconn_kill_oldest_pcb()
  %49 = load i32, i32* %4, align 4
  switch i32 %49, label %75 [
    i32 128, label %50
    i32 129, label %63
  ]

50:                                               ; preds = %47
  %51 = load i64, i64* %8, align 8
  %52 = load i64, i64* @ESPCONN_OK, align 8
  %53 = icmp eq i64 %51, %52
  br i1 %53, label %54, label %58

54:                                               ; preds = %50
  %55 = load %struct.espconn*, %struct.espconn** %6, align 8
  %56 = load i64, i64* %7, align 8
  %57 = call i32 @ESPCONN_EVENT_ERROR(%struct.espconn* %55, i64 %56)
  br label %62

58:                                               ; preds = %50
  %59 = load %struct.espconn*, %struct.espconn** %6, align 8
  %60 = load i64, i64* %8, align 8
  %61 = call i32 @ESPCONN_EVENT_ERROR(%struct.espconn* %59, i64 %60)
  br label %62

62:                                               ; preds = %58, %54
  br label %76

63:                                               ; preds = %47
  %64 = load i64, i64* %8, align 8
  %65 = load i64, i64* @ESPCONN_OK, align 8
  %66 = icmp eq i64 %64, %65
  br i1 %66, label %67, label %70

67:                                               ; preds = %63
  %68 = load %struct.espconn*, %struct.espconn** %6, align 8
  %69 = call i32 @ESPCONN_EVENT_CLOSED(%struct.espconn* %68)
  br label %74

70:                                               ; preds = %63
  %71 = load %struct.espconn*, %struct.espconn** %6, align 8
  %72 = load i64, i64* %8, align 8
  %73 = call i32 @ESPCONN_EVENT_ERROR(%struct.espconn* %71, i64 %72)
  br label %74

74:                                               ; preds = %70, %67
  br label %76

75:                                               ; preds = %47
  br label %76

76:                                               ; preds = %75, %74, %62
  ret void
}

declare dso_local i32 @lwIP_ASSERT(%struct.TYPE_6__*) #1

declare dso_local i32 @os_free(%struct.TYPE_6__*) #1

declare dso_local i32 @espconn_kill_oldest_pcb(...) #1

declare dso_local i32 @ESPCONN_EVENT_ERROR(%struct.espconn*, i64) #1

declare dso_local i32 @ESPCONN_EVENT_CLOSED(%struct.espconn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
